add Food to database

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -37,7 +37,7 @@
 <h3>Using CSS to style an HTML Form</h3>
 
 <div>
-  <form method="post" action="/add">
+  <form method="post" action="/product/add">
     <input
             type="hidden"
             th:name="${_csrf.parameterName}"
