--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -119,36 +119,9 @@
       <div class="container">
         <p>
         <h3></h3>
-        <table class="table table-dark">
-          <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-          </tbody>
-        </table>
+        <ul>
+          <li th:each="food : ${foods}" th:text="${food.foodName}">Hello World</li>
+        </ul>
         </p>
       </div>
     </section>
