--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -119,8 +119,8 @@
       <div class="container">
         <p>
         <h3></h3>
-        <ul>
-          <li th:each="food : ${foods}" th:text="${food.foodName}">Hello World</li>
+        <ul th:each="order : ${orderList}">
+          <li th:each="food : ${order.foods}" th:text="${food.foodName} + ' ' + ${food.desc} + ' ' + ${food.quantity} + ' ' + ${food.price}"></li>
         </ul>
         </p>
       </div>
