--- a/src/main/resources/templates/admin_pickup.html
+++ b/src/main/resources/templates/admin_pickup.html
@@ -12,15 +12,16 @@
   <title>Document</title>
 </head>
 <body>
+<h1>SELF PICKUP ORDERS</h1>
 <table class="table">
   <div th:each="order : ${orderList}">
-  <tr>
-    <th scope="col">Num</th>
-    <th scope="col">Name</th>
-    <th scope="col">Description</th>
-    <th scope="col">Quantity</th>
-    <th scope="col">Price</th>
-  </tr>
+    <tr>
+      <th scope="col">Num</th>
+      <th scope="col">Name</th>
+      <th scope="col">Description</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Price</th>
+    </tr>
     <tr th:each="orderItem, iter : ${order.cartItems}">
       <th name="foodID" scope="row" th:text="${iter.index + 1}"></th>
       <td th:text="${orderItem.food.foodName}"></td>
@@ -29,7 +30,7 @@
       <td th:text="${orderItem.quantity * orderItem.food.price}"></td>
     </tr>
     <th>
-      <a th:href="@{/admin/update(id=${order.oid})}">
+      <a>
         <button>Confirm</button>
       </a>
       <a>
