--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,30 +75,32 @@
                 <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
                 <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
                 <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                <li th:if="${name}"  class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+                <li th:if="${account}"  class="dropdown"><a href="#"><span th:text="${account.getUsername()}">Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
-                        <li><a href="#">Drop Down 1</a></li>
-                        <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                            <ul>
-                                <li><a href="/product">Add New Product</a></li>
-                                <li><a href="#">Deep Drop Down 2</a></li>
-                                <li><a href="#">Deep Drop Down 3</a></li>
-                                <li><a href="#">Deep Drop Down 4</a></li>
-                                <li><a href="#">Deep Drop Down 5</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Drop Down 2</a></li>
-                        <li><a href="#">Drop Down 3</a></li>
-                        <li><a href="#">Drop Down 4</a></li>
+                        <li th:if="${account.getRole()=='ADMIN'}"><a href="/admin">Add new dish</a></li>
+                        <li><a href="/profile">Profile</a></li>
+                        <li><a href="/menu">Menu</a></li>
+                        <li><a href="/order">Your Order</a></li>
+                        <li><a href="/menu/cart">Cart</a></li>
+<!--                        <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>-->
+<!--                            <ul>-->
+<!--                                <li><a href="/product">Add New Product</a></li>-->
+<!--                                <li><a href="#">Deep Drop Down 2</a></li>-->
+<!--                                <li><a href="#">Deep Drop Down 3</a></li>-->
+<!--                                <li><a href="#">Deep Drop Down 4</a></li>-->
+<!--                                <li><a href="#">Deep Drop Down 5</a></li>-->
+<!--                            </ul>-->
+<!--                        </li>-->
+<!--                        <li><a href="#">Drop Down 3</a></li>-->
+<!--                        <li><a href="#">Drop Down 4</a></li>-->
                     </ul>
                 </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
-        <div th:if="${name}" th:text="${name}"> Hello </div>
         <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Book a table</a>
-        <a th:if="${name}" href="/logout" class="book-a-table-btn scrollto d-none d-lg-flex">Logout</a>
-        <a th:unless="${name}" href="/login" class="book-a-table-btn scrollto d-none d-lg-flex">Login</a>
+        <a th:if="${account}" href="/logout" class="book-a-table-btn scrollto d-none d-lg-flex">Logout</a>
+        <a th:unless="${account}" href="/login" class="book-a-table-btn scrollto d-none d-lg-flex">Login</a>
 
     </div>
 </header><!-- End Header -->
