--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
         <button type="submit">Login</button>
         <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
-            <div th:if="${error}" style="color:red" th:text="${error}"></div>
+            <div th:if="${error}" style="color:red">Wrong username or password</div>
         </label>
     </div>
 
