--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -110,8 +110,8 @@
       <div class="d-flex justify-content-between align-items-center">
         <h2>Checkout</h2>
         <ol>
-          <li><a th:href="${menu}">Menu</a></li>
-          <li><a th:href="${checkout}">Checkout</a></li>
+          <li><a href="/menu">Menu</a></li>
+          <li><a href="/menu/checkout">Checkout</a></li>
           <li>Admin</li>
         </ol>
       </div>
@@ -120,42 +120,43 @@
   </section>
 
   <section class="inner-page">
-    <div class="container">
-      <table class="table table-dark mb-1">
+    <div class="container" style="border-radius: 2px; padding-top: 5px;padding-bottom: 5px">
+      <table class="table mb-1" style="background-color: #1d1b16; border-color: #0c0b09;padding-top: 5px;padding-bottom: 5px">
         <thead>
         <tr>
-          <th scope="col">Num</th>
-          <th scope="col">Food Name</th>
-          <th scope="col">Desc</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">Price</th>
-          <th scope="col"></th>
+          <th class="text-light" scope="col">Num</th>
+          <th class="text-light" scope="col">Food Name</th>
+          <th class="text-light" scope="col">Desc</th>
+          <th class="text-light" scope="col">Quantity</th>
+          <th class="text-light" scope="col">Price</th>
+          <th class="text-light" scope="col"></th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="food, iter : ${foods}">
-          <th name="foodID" scope="row" th:text="${iter.index + 1}"></th>
-          <td th:text="${food.foodName}"></td>
-          <td th:text="${food.desc}"></td>
-          <td th:text="${food.quantity}"></td>
-          <td th:text="${food.price}"></td>
+          <th class="text-light" name="foodID" scope="row" th:text="${iter.index + 1}"></th>
+          <td class="text-light" th:text="${food.foodName}"></td>
+          <td class="text-light" th:text="${food.desc}"></td>
+          <td class="text-light" th:text="${food.quantity}"></td>
+          <td class="text-light" th:text="${food.price}"></td>
           <td>
-            <a th:href="@{/menu/add(id=${food.fid})}">
-              <button>Remove</button>
+            <a th:href="@{/menu/cart_delete(id=${food.fid})}">
+              <button style="border: 2px solid black; background-color: #cda45e; color: white; border-radius: 50px;padding: 8px 25px;">Remove</button>
             </a>
           </td>
         </tr>
         </tbody>
       </table>
-      <form th:action="@{/menu/checkout}" method="get">
+      <form th:action="@{/menu/checkout}" method="get" style="margin-bottom: 10px; margin-top: 10px">
         <label  class="radio-inline">
-          <input type="radio" th:name="radioName" id="selfPickup" value="selfPickup" checked="checked"/>Self Pickup
+          <input style="color: black" type="radio" th:name="radioName" id="selfPickup" value="selfPickup" checked="checked"/>Self Pickup
         </label>
         <label  class="radio-inline">
-          <input  type="radio" th:name="radioName"  id="shipping" value="shipping"/>Shipping
+          <input style="color: black"  type="radio" th:name="radioName"  id="shipping" value="shipping"/>Shipping
         </label>
         <br>
-        <button type="submit" value="Submit">Checkout</button></a>
+        <h3 style="color: white" th:text="${totalPrice}"></h3>
+        <button style="border: 2px solid black; background-color: #cda45e; color: white; border-radius: 50px;padding: 8px 25px;" type="submit" value="Submit">Checkout</button></a>
       </form>
     </div>
   </section>
