--- a/src/main/resources/templates/inner-page.html
+++ b/src/main/resources/templates/inner-page.html
@@ -67,14 +67,11 @@
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
-        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="#about">About</a></li>
-        <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
-        <li><a class="nav-link scrollto" href="#specials">Specials</a></li>
-        <li><a class="nav-link scrollto" href="#events">Events</a></li>
-        <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
-        <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        <li><a class="nav-link scrollto active" href="/admin">Admin</a></li>
+        <li><a class="nav-link scrollto" href="/admin/admin_shipping">Shipping</a></li>
+        <li><a class="nav-link scrollto" href="/admin/admin_pickup">Pickup</a></li>
+        <li><a class="nav-link scrollto" href="/admin/ready">Ready</a></li>
+        <li><a class="nav-link scrollto" href="/admin/send_mail">Mail</a></li>
         <li th:if="${account}"  class="dropdown"><a href="#"><span th:text="${account.getUsername()}">Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li th:if="${account.getRole()=='ADMIN'}"><a href="/admin">Add new dish</a></li>
@@ -96,7 +93,7 @@
           </ul>
         </li>
       </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
+      <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
     <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Book a table</a>
 
@@ -110,7 +107,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <h2>Admin</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li>Admin</li>
         </ol>
       </div>
@@ -119,44 +116,31 @@
   </section>
 
   <section class="inner-page">
-    <div class="container">
-      <table class="table table-dark mb-1">
+    <div class="container" style="border-radius: 2px; padding-top: 5px;padding-bottom: 5px" th:each="order : ${orderList}">
+      <table class="table mb-1" style="background-color: #1d1b16; border-color: #0c0b09;padding-top: 5px;padding-bottom: 5px">
         <thead>
         <tr>
-          <th scope="col">Num</th>
-          <th scope="col">Food Name</th>
-          <th scope="col">Desc</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">Price</th>
-          <th scope="col"></th>
-          <th scope="col"></th>
+          <th class="text-light" scope="col">Num</th>
+          <th class="text-light" scope="col">Name</th>
+          <th class="text-light" scope="col">Description</th>
+          <th class="text-light" scope="col">Quantity</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="food, iter : ${foods}">
-          <th name="foodID" scope="row" th:text="${iter.index + 1}"></th>
-          <td th:text="${food.foodName}"></td>
-          <td th:text="${food.desc}"></td>
-          <td th:text="${food.quantity}"></td>
-          <td th:text="${food.price}"></td>
+          <th class="text-light" name="foodID" scope="row" th:text="${iter.index + 1}"></th>
+          <td class="text-light" th:text="${food.foodName}"></td>
+          <td class="text-light" th:text="${food.desc}"></td>
+          <td class="text-light" th:text="${${food.price}}"></td>
           <td>
             <a th:href="@{/menu/add(id=${food.fid})}">
-              <button>Remove</button>
+              <button>Add To Cart</button>
             </a>
           </td>
         </tr>
         </tbody>
       </table>
     </div>
-    <form th:action="@{/menu/checkout}" method="get">
-      <label  class="radio-inline">
-        <input type="radio" th:name="radioName" id="selfPickup" value="selfPickup" checked="checked"/>Self Pickup
-      </label>
-      <label  class="radio-inline">
-        <input  type="radio" th:name="radioName"  id="shipping" value="shipping"/>Shipping
-      </label>
-      <button type="submit" value="Submit">Checkout</button></a>
-    </form>
   </section>
 
 </main><!-- End #main -->
