--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,26 +82,14 @@
                         <li><a href="/menu">Menu</a></li>
                         <li><a href="/order">Your Order</a></li>
                         <li><a href="/menu/cart">Cart</a></li>
-<!--                        <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>-->
-<!--                            <ul>-->
-<!--                                <li><a href="/product">Add New Product</a></li>-->
-<!--                                <li><a href="#">Deep Drop Down 2</a></li>-->
-<!--                                <li><a href="#">Deep Drop Down 3</a></li>-->
-<!--                                <li><a href="#">Deep Drop Down 4</a></li>-->
-<!--                                <li><a href="#">Deep Drop Down 5</a></li>-->
-<!--                            </ul>-->
-<!--                        </li>-->
-<!--                        <li><a href="#">Drop Down 3</a></li>-->
-<!--                        <li><a href="#">Drop Down 4</a></li>-->
                     </ul>
                 </li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
-        <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Book a table</a>
         <a th:if="${account}" href="/logout" class="book-a-table-btn scrollto d-none d-lg-flex">Logout</a>
         <a th:unless="${account}" href="/login" class="book-a-table-btn scrollto d-none d-lg-flex">Login</a>
-
+        <a th:unless="${account}" href="/register" class="book-a-table-btn scrollto d-none d-lg-flex">Register</a>
     </div>
 </header><!-- End Header -->
 
