--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<form method="post" action="/login">
+<form method="post" th:action="@{/login}">
     <div class="container">
         <input
             type="hidden"
