--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -84,6 +84,9 @@
           </div>
         </div>
       </div>
+      <a href="/">
+        <button type="button" class="btn btn-info">Home Page</button>
+      </a>
     </div>
   </div>
 </section>
