--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -61,7 +61,7 @@
 <header id="header" class="fixed-top d-flex align-items-cente">
   <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
-    <h1 class="logo me-auto me-lg-0"><a href="index.html">Restaurantly</a></h1>
+    <h1 class="logo me-auto me-lg-0"><a th:href="@{/}">Restaurantly</a></h1>
     <!-- Uncomment below if you prefer to use an image logo -->
     <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -71,6 +71,7 @@
         <li><a class="nav-link scrollto" href="/admin/admin_shipping">Shipping</a></li>
         <li><a class="nav-link scrollto" href="/admin/admin_pickup">Pickup</a></li>
         <li><a class="nav-link scrollto" href="/admin/ready">Ready</a></li>
+        <li><a class="nav-link scrollto" href="/admin/done">Done</a></li>
         <li><a class="nav-link scrollto" href="/admin/send_mail">Mail</a></li>
         <li th:if="${account}"  class="dropdown"><a href="#"><span th:text="${account.getUsername()}">Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
@@ -94,7 +95,7 @@
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
-    <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Book a table</a>
+    <a href="/logout" class="book-a-table-btn scrollto d-none d-lg-flex">Logout</a>
 
   </div>
 </header><!-- End Header -->
